--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
-  <%= @activity.name %>
+  <strong>Title:</strong>
+  <%= @activity.title %>
 </p>
 
 <p>
@@ -13,11 +13,6 @@
 <p>
   <strong>Link:</strong>
   <%= @activity.link %>
-</p>
-
-<p>
-  <strong>Snippet:</strong>
-  <%= @activity.snippet %>
 </p>
 
 <p>
