--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.label :title %><br>
+    <%= f.text_field :title %>
   </div>
   <div class="field">
     <%= f.label :completion_time %><br>
@@ -22,10 +22,6 @@
   <div class="field">
     <%= f.label :link %><br>
     <%= f.text_field :link %>
-  </div>
-  <div class="field">
-    <%= f.label :snippet %><br>
-    <%= f.text_field :snippet %>
   </div>
   <div class="field">
     <%= f.label :content %><br>
