Remove bad attributes in CustomActivity views

--- a/app/views/custom_activities/_form.html.erb
+++ b/app/views/custom_activities/_form.html.erb
@@ -12,20 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.label :title %><br>
+    <%= f.text_field :title %>
   </div>
   <div class="field">
     <%= f.label :completion_time %><br>
     <%= f.number_field :completion_time %>
-  </div>
-  <div class="field">
-    <%= f.label :link %><br>
-    <%= f.text_field :link %>
-  </div>
-  <div class="field">
-    <%= f.label :snippet %><br>
-    <%= f.text_field :snippet %>
   </div>
   <div class="field">
     <%= f.label :content %><br>
