--- a/app/views/custom_activities/show.html.erb
+++ b/app/views/custom_activities/show.html.erb
@@ -1,23 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
-  <%= @custom_activity.name %>
+  <strong>Title:</strong>
+  <%= @custom_activity.title %>
 </p>
 
 <p>
   <strong>Completion time:</strong>
   <%= @custom_activity.completion_time %>
-</p>
-
-<p>
-  <strong>Link:</strong>
-  <%= @custom_activity.link %>
-</p>
-
-<p>
-  <strong>Snippet:</strong>
-  <%= @custom_activity.snippet %>
 </p>
 
 <p>
