--- a/app/views/custom_activities/index.html.erb
+++ b/app/views/custom_activities/index.html.erb
@@ -5,10 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th>Title</th>
       <th>Completion time</th>
-      <th>Link</th>
-      <th>Snippet</th>
       <th>Content</th>
       <th colspan="3"></th>
     </tr>
@@ -17,10 +15,8 @@
   <tbody>
     <% @custom_activities.each do |custom_activity| %>
       <tr>
-        <td><%= custom_activity.name %></td>
+        <td><%= custom_activity.title %></td>
         <td><%= custom_activity.completion_time %></td>
-        <td><%= custom_activity.link %></td>
-        <td><%= custom_activity.snippet %></td>
         <td><%= custom_activity.content %></td>
         <td><%= link_to 'Show', custom_activity %></td>
         <td><%= link_to 'Edit', edit_custom_activity_path(custom_activity) %></td>
