Remove bad attributes in Activity views

--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+  <strong>Content type:</strong>
+  <%= @activity.content_type %>
+</p>
+
+<p>
   <strong>Link:</strong>
   <%= @activity.link %>
 </p>
