--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -20,6 +20,10 @@
     <%= f.number_field :completion_time %>
   </div>
   <div class="field">
+    <%= f.label :content_type %><br>
+    <%= f.text_field :content_type %>
+  </div>
+  <div class="field">
     <%= f.label :link %><br>
     <%= f.text_field :link %>
   </div>
