--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -5,10 +5,10 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th>Title</th>
       <th>Completion time</th>
       <th>Link</th>
-      <th>Snippet</th>
+      <th>Content type</th>
       <th>Content</th>
       <th colspan="3"></th>
     </tr>
@@ -20,6 +20,7 @@
         <td><%= activity.title %></td>
         <td><%= activity.completion_time %></td>
         <td><%= activity.link %></td>
+        <td><%= activity.content_type %></td>
         <td><%= activity.content %></td>
         <td><%= link_to 'Show', activity %></td>
         <td><%= link_to 'Edit', edit_activity_path(activity) %></td>
