backbone model views and mock data

--- a/app/assets/javascripts/backbone/templates/activities/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/index.jst.ejs
@@ -1,3 +1,7 @@
+<script type="text/template" id="activity-template">
+	<p> hi </p>
+</script>
+
 <h1>Listing activities</h1>
 
 <table id="activities-table">
