--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,9 +1,11 @@
+
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Activities</h1>
 <ul class="testTable"> </ul>
+<div class="testDiv"> </div>
 
-<table>
+<!-- <table>
   <thead>
     <tr>
       <th>Title</th>
@@ -29,7 +31,7 @@
       </tr>
     <% end %>
   </tbody>
-</table>
+</table> -->
 
 <br>
 
