added dropdown with templating

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,4 +1,3 @@
-
 <p id="notice"><%= notice %></p>
 
 <!-- Todo: Move to css file -->
@@ -20,7 +19,8 @@
   <li><a href="/activities#activities"> Activities </a></li>
   <li><a href="/activities#interests"> Interests </a></li>
 </ul>
-<div class="testDiv"> </div>
+<div class="testDiv">
+  <div id="time-options-container"></div>
+</div>
 
 <br>
-
