added signup page

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -18,6 +18,7 @@
   <li><a href="/activities#home"> Home </a></li>
   <li><a href="/activities#activities"> Activities </a></li>
   <li><a href="/activities#interests"> Interests </a></li>
+  <li><a href="/activities#users"> Users </a></li>
 </ul>
 <div class="testDiv">
   <div id="time-options-container"></div>
