--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -26,7 +26,7 @@
   <input type="text" name="username" id="username-login">
   <br>
   password:<br>
-  <input type="text" name="password" id="password-login">
+  <input type="password" name="password" id="password-login">
   <button id="login-submit"> login </button>
 </form>
 
