Added custom activities view collection and template

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -19,6 +19,8 @@
   <li><a href="/activities#activities"> Activities </a></li>
   <li><a href="/activities#interests"> Interests </a></li>
   <li><a href="/activities#users"> Users </a></li>
+  <li><a href="/activities#custom"> Custom Activities</a></li>
+
 </ul>
 
 <div class="testDiv">
