--- a/app/views/tempo/index.html.erb
+++ b/app/views/tempo/index.html.erb
@@ -18,7 +18,8 @@
   <li><a href="/tempo#home"> Home </a></li>
   <li><a href="/tempo#activities"> Activities </a></li>
   <li><a href="/tempo#interests"> Interests </a></li>
-  <li><a href="/tempo#users"> Users </a></li>
+  <li><a href="/tempo#users"> Users</a></li>
+  <li><a href="/tempo#customActivities"> Custom Activities</a></li>
 </ul>
 
 <div class="testDiv">
