adding modal view for activities

--- a/app/assets/javascripts/backbone/templates/activities/home.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/home.jst.ejs
@@ -17,4 +17,4 @@
     <% }); %>
 </select> 
 <button class='go-btn'>GO</button>
-<a href='activities#interests'> See your interests </a>
+<a href='tempo#interests'> See your interests </a>
