--- a/app/assets/javascripts/backbone/templates/activities/test.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/test.jst.ejs
@@ -1,2 +1,2 @@
+<a href="#"><%= title %></a>
 
-<button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#myModal"><%= title %></button>
