--- a/app/assets/javascripts/backbone/templates/unauthenticated/login.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/unauthenticated/login.jst.ejs
@@ -13,7 +13,7 @@
       </div>
     </div>
     <div class="form-actions">
-      <input type="submit" value="Login" class="btn btn-primary" />
     </div>
   </fieldset>
 </form>
+      <button  value="login" class="btn btn-primary login-submit"> Login </button>
