added signup flow

--- a/app/assets/javascripts/backbone/templates/unauthenticated/login.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/unauthenticated/login.jst.ejs
@@ -17,3 +17,5 @@
   </fieldset>
 </form>
       <button  value="login" class="btn btn-primary login-submit"> Login </button>
+
+      <a class="create"> create an account </a>
