--- a/app/assets/javascripts/backbone/templates/unauthenticated/login.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/unauthenticated/login.jst.ejs
@@ -1,9 +1,9 @@
 <form id="login-form" class="form-horizontal">
   <fieldset>
     <div id="email_group" class="control-group">
-      <label class="control-label" for="email">Email</label>
+      <label class="control-label" >username or email</label>
       <div class="controls">
-        <input id="email" name="email" type="email" required="required" />
+        <input id="username-or-email" name="username-or-email" required="required" />
       </div>
     </div>
     <div id="password_group" class="control-group">
