--- a/app/assets/javascripts/backbone/templates/activities/home.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/home.jst.ejs
@@ -1,5 +1,5 @@
 
-<h3 style='color: #e74c3c;'> Welcome Home Owen </h3>
+<h3 style='color: #e74c3c;'> Welcome Home <%= name %></h3>
 <select id='time-selector'>
     <% _(times).each(function(time) { %> 
         <option value='<%= time.duration %>'><%= time.duration %></option>
