--- a/app/assets/javascripts/backbone/templates/activities/home.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/home.jst.ejs
@@ -19,3 +19,4 @@
 <button class='go-btn'>GO</button>
 <a href='tempo#interests'> See your interests </a>
 
+<a href='tempo#settings'> See your settings</a>
