--- a/app/assets/javascripts/backbone/templates/activities/customActivity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/customActivity.jst.ejs
@@ -1,10 +1,54 @@
-<h3> Create New Custom Activity </h3>
+<!-- Temporary styling -->
+
+<style>
+	body {
+		background-color: #f3f3f3;
+	}
+	#custom-activities-form {
+		width: 350px;
+		height: 350px;
+		border: 1px solid #dedede;
+		border-radius: 3px;
+		background-color: white;
+		box-shadow: .5px .5px .5px #888888;
+		margin: 0 auto;
+		text-align: center;
+		padding-top: 30px;
+		padding-bottom: 20px;
+	}
+
+	input {
+		width: 300px;
+		height: 30px;
+		margin-bottom: 15px;
+	}
+
+	label {
+		margin-bottom: 5px;
+	}
+
+	.submitCustomActivity {
+		width: 300px;
+		height: 35px;
+		background-color: #6BB9F0;
+		border: 1px solid #22A7F0;
+		border-radius: 3px;
+	}
+
+	.submitCustomActivity:hover {
+		opacity: .8;
+		cursor: pointer;
+	}
+</style>
+
+
 <form id="custom-activities-form" name="custom-activity"> 
-	<label for="title"> title: </label>
-	<input type="text" name"title" id="title" value="">
-	<label for="content"> content: </label>
-	<input type="text" name"content" id="content" value="">
-	<label for="completion_time"> completion time: </label>
-	<input type="text" name"completion_time" id="completion_time" value="">
-	<br> <button type="button" class="submitCustomActivity"> Submit </button> 
+	<h3> Create New Custom Activity </h3>
+	<label for="title"> Title: </label> <br>
+	<input type="text" name"title" id="title" value=""> <br>
+	<label for="content"> Content: </label> <br>
+	<input type="text" name"content" id="content" value=""> <br>
+	<label for="completion_time"> Completion time: </label> <br>
+	<input type="text" name"completion_time" id="completion_time" value=""> <br>
+	<button type="button" class="submitCustomActivity"> Submit </button> <br>
 </form>
