signup and login basic form styling, fixed gemfile ruby

--- a/app/assets/javascripts/backbone/templates/activities/customActivity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/customActivity.jst.ejs
@@ -1,9 +1,5 @@
 <!-- Temporary styling -->
-
 <style>
-	body {
-		background-color: #f3f3f3;
-	}
 	#custom-activities-form {
 		width: 350px;
 		height: 350px;
@@ -30,8 +26,8 @@
 	.submitCustomActivity {
 		width: 300px;
 		height: 35px;
-		background-color: #6BB9F0;
-		border: 1px solid #22A7F0;
+	    background-color: #66CC99;
+	    border: 1px solid #2ABB9B;
 		border-radius: 3px;
 	}
 
