--- a/app/views/tempo/index.html.erb
+++ b/app/views/tempo/index.html.erb
@@ -2,6 +2,10 @@
 
 <!-- Todo: Move to css file -->
 <style>
+  body {
+    background-color: #f3f3f3;
+  }
+  
   .menuSelection {
     list-style-type: none;
   }
