--- a/app/assets/javascripts/backbone/templates/unauthenticated/signup.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/unauthenticated/signup.jst.ejs
@@ -1,3 +1,53 @@
+<!-- Temporary Styling -->
+<!-- Temporary styling -->
+<style>
+  #signup-form {
+    width: 350px;
+    height: 350px;
+    border: 1px solid #dedede;
+    border-radius: 3px;
+    background-color: white;
+    box-shadow: .5px .5px .5px #888888;
+    margin: 0 auto;
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 20px;
+  }
+
+  #signup-form input {
+    width: 300px;
+    height: 20px;
+    margin-bottom: 15px;
+  }
+
+  #signup-form label {
+    margin-bottom: 5px;
+  }
+
+  #signup-form fieldset {
+    border: none;
+  }
+
+  #signup-form button {
+    width: 300px;
+    height: 35px;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 15px;
+    background-color: #66CC99;
+    border: 1px solid #2ABB9B;
+    border-radius: 3px;
+    color: #EEEEEE;
+
+  }
+
+  #signup-form button:hover {
+    opacity: .8;
+    cursor: pointer;
+  }
+</style>
+
+
 <form id="signup-form" class="form-horizontal">
   <fieldset>
     <div id="name-group" class="control-group">
@@ -32,7 +82,7 @@
     </div>
 
     <div class="form-actions">
-      <input type="submit" value="Sign up" class="btn btn-primary" />
+      <button type="submit" value="Sign up" class="btn btn-primary"> Sign Up </button>
     </div>
   </fieldset>
 </form>
