hooked up post custom activities

--- a/app/assets/javascripts/backbone/templates/activities/customActivity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/customActivity.jst.ejs
@@ -1,4 +1,6 @@
 <!-- Temporary styling -->
+<!-- TODO: move this away -->
+
 <style>
 	#custom-activities-form {
 		width: 350px;
@@ -17,6 +19,7 @@
 		width: 300px;
 		height: 30px;
 		margin-bottom: 15px;
+		padding-left: 10px;
 	}
 
 	label {
@@ -24,11 +27,12 @@
 	}
 
 	.submitCustomActivity {
-		width: 300px;
+		width: 315px;
 		height: 35px;
 	    background-color: #66CC99;
 	    border: 1px solid #2ABB9B;
 		border-radius: 3px;
+		margin-top: 10px;
 	}
 
 	.submitCustomActivity:hover {
@@ -36,7 +40,6 @@
 		cursor: pointer;
 	}
 </style>
-
 
 <form id="custom-activities-form" name="custom-activity"> 
 	<h3> Create New Custom Activity </h3>
