added warning message for usermodel validation fail

--- a/app/assets/javascripts/backbone/templates/unauthenticated/login.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/unauthenticated/login.jst.ejs
@@ -28,6 +28,11 @@
     border: none;
   }
 
+  #warning {
+  color: red;
+  text-align: center;
+  }
+
   button {
     width: 315px;
     height: 35px;
@@ -46,6 +51,7 @@
   }
 </style>
 
+<h1 id="warning"> </h1> 
 <form id="login-form" class="form-horizontal">
       <fieldset>
         <div id="email_group" class="control-group">
@@ -63,7 +69,7 @@
         <div class="form-actions">
         </div>
       </fieldset>
-      
+
 
 </form>
 
