home screen go button

--- a/app/assets/javascripts/backbone/templates/activities/home.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/home.jst.ejs
@@ -1,4 +1,4 @@
-<!-- Temporary styling
+<!-- Temporary styling -->
 
 <style>
 	.home-wrapper {
@@ -6,6 +6,7 @@
 		height: 400px;
 		border: 1px solid green;
 		margin: 0 auto;
+		margin-top: 40px;
 		text-align: center;
 		padding: 20px;
 	    border: 1px solid #dedede;
@@ -20,14 +21,15 @@
 	}
 
 	.home-wrapper button {
-	    width: 315px;
-	    height: 35px;
+	    width: 75px;
+	    height: 75px;
 	    display: block;
 	    margin: 0 auto;
-	    margin: 15px;
+	    /*margin: 15px;*/
+	    margin-top: 15px;
 	    background-color: #66CC99;
 	    border: 1px solid #2ABB9B;
-	    border-radius: 3px;		
+	    border-radius: 35px;		
 	}
 
 	.home-wrapper button:hover {
@@ -36,7 +38,7 @@
 	}
 
 </style>
- -->
+
 
 <div class="home-wrapper">
 	<h3> Welcome Home <%= name %></h3>
