Changed from modal to new view for activities

--- a/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
@@ -1,9 +1,6 @@
-<td><%= title %></td>
-<td><%= content %></td>
-<td><%= completion_time %></td>
-<td><%= content_type %></td>
-<td><%= link %></td>
-
-<td><a href="#/<%= id %>">Show</a></td>
-<td><a href="#/<%= id %>/edit">Edit</a></td>
-<td><a href="#/<%= id %>/destroy" class="destroy">Destroy</a></td>
+<div class="activity">
+	<h3><%= title %></h3>
+	<p><%= content %></p>
+	<a href='<%= link %>'> Link </a><br>
+	<a href='tempo#activities'> Back </a>
+</div>
