--- a/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
@@ -1,5 +1,7 @@
 <div class="activity">
 	<h3><%= title %></h3>
+	<button class='like-btn'>Like</button>
+	<button class='dislike-btn'>Dislike</button><br>
 	<p><%= content %></p>
 	<a href='<%= link %>'> Link </a><br>
 	<a href='tempo#activities'> Back </a>
