--- a/app/assets/javascripts/backbone/templates/unauthenticated/signup.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/unauthenticated/signup.jst.ejs
@@ -26,7 +26,7 @@
 
   #signup-form fieldset {
     border: none;
-  }
+  } 
 
   #signup-form button {
     width: 300px;
@@ -45,10 +45,14 @@
     opacity: .8;
     cursor: pointer;
   }
+
+  #signup {
+    margin: 0 auto;
+  }
 </style>
 
-
-<form id="signup-form" class="form-horizontal">
+<div id="signup-form">
+<form  class="form-horizontal">
   <fieldset>
     <div id="name-group" class="control-group">
       <label class="control-label" for="login_name">Name</label>
@@ -81,8 +85,10 @@
       </div>
     </div>
 
-    <div class="form-actions">
-      <button type="submit" value="Sign up" class="btn btn-primary"> Sign Up </button>
-    </div>
   </fieldset>
 </form>
+
+    <div class="form-actions">
+      <button type="submit" id="signup" value="Sign up" class="btn btn-primary"> Sign Up </button>
+    </div>
+</div>
