Like and dislike implemented

--- a/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
@@ -1,5 +1,6 @@
 <div class="activity">
 	<h3><%= title %></h3>
+	<div id="likes">Likes: <div id="like-count"><%= likes %></div></div>
 	<button class='like-btn'>Like</button>
 	<button class='dislike-btn'>Dislike</button><br>
 	<p><%= content %></p>
