Added dislike counts

--- a/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
@@ -1,6 +1,7 @@
 <div class="activity">
 	<h3 id="title"><%= title %></h3>
 	<div id="likes">Likes: <div id="like-count"><%= likes %></div></div>
+	<div id="dislikes">Disikes: <div id="dislike-count"><%= dislikes %></div></div>
 	<button class='like-btn'>Like</button>
 	<button class='dislike-btn'>Dislike</button><br>
 	<div id="content"><p><%= content %></p></div>
