--- a/app/assets/javascripts/backbone/templates/unauthenticated/signup.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/unauthenticated/signup.jst.ejs
@@ -3,7 +3,7 @@
 <style>
   #signup-form {
     width: 350px;
-    height: 350px;
+    height: 375px;
     border: 1px solid #dedede;
     border-radius: 3px;
     background-color: white;
@@ -12,6 +12,22 @@
     text-align: center;
     padding-top: 30px;
     padding-bottom: 20px;
+    margin-top: 30px;
+    position: relative;
+  }
+
+ #signup-form header {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 35px;
+    border-bottom: 1px solid #DDD;
+    background: #F4F4F2;
+  }  
+
+  #signup-form header h3 {
+    margin-top: 8px;
+    font-weight: normal;
   }
 
   #signup-form input {
@@ -19,6 +35,11 @@
     height: 20px;
     margin-bottom: 15px;
   }
+
+  #signup-form input:hover {
+    background-color: #E4F1FE;
+    border: 1px solid #DDD;
+  }  
 
   #signup-form label {
     margin-bottom: 5px;
@@ -34,8 +55,8 @@
     display: block;
     margin: 0 auto;
     margin-bottom: 15px;
-    background-color: #66CC99;
-    border: 1px solid #2ABB9B;
+    background-color: #D35C48;
+    border: 1px solid #D35C48;
     border-radius: 3px;
     color: #EEEEEE;
 
@@ -49,11 +70,14 @@
   #signup {
     margin: 0 auto;
   }
+  
 </style>
 
 <div id="signup-form">
 <form  class="form-horizontal">
+  <header> <h3> Register </h3></header>
   <fieldset>
+    <br>
     <div id="name-group" class="control-group">
       <label class="control-label" for="login_name">Name</label>
       <div class="controls">
