--- a/app/views/tempo/index.html.erb
+++ b/app/views/tempo/index.html.erb
@@ -3,26 +3,43 @@
 <!-- Todo: Move to css file -->
 <style>
   body {
-    background-color: #f3f3f3;
+    background-color: #F4F4F4;
     padding: 0px;
     margin: 0;
     font-family: 'Open Sans Condensed', sans-serif;
     font-size: 120%;
+  }
+
+  #logo {
+    width: 200px;
+    height: 80px;
+    margin-left: 20px;
+    margin-top: 20px;
+    float: left;
   }
   
   .menuSelection {
     list-style-type: none;
     height: 90px;
     margin-top: -13px;
+    margin-bottom: 0;
     padding-right: 40px;
-    background-color: #3b333f;
+
 
   }
 
+  .sidebar {
+    width: 15%;
+    height: 100%;
+    float: left;
+    position: fixed;
+    top: 100px;
+    left: 0;
+    background-color: #262d63;
+  }
+
   .menuSelection li{
-    display: inline;
     margin: 10px;
-    float: right;
   }
 
   .menuSelection li a {
@@ -32,18 +49,29 @@
     text-decoration: none;
     position: relative;
     top: 30px;
+    color: #F4F4F4;
+
   }
 
   .menuSelection li a:hover {
     text-decoration: underline;
-    background-color: #3b333f;
+    background-color: #1A1F3F;
+  }
+
+  .top-bar {
+    width: 15%;
+    position: fixed;
+    background-color: #262d63;
+    height: 100px;
+    top: 0;
+    left: 0;
   }
 
   footer {
     position: absolute;
     bottom: 0;
-    height: 65px;
-    background-color: #3b333f;
+    height: 50px;
+    background-color: #262d63;
     width: 100%;
     color: white;
     font-size: 20px;
@@ -57,12 +85,19 @@
   }
 </style>
 
+<div class="top-bar">
+  <img id="logo" src="/tempologo.png" />
+</div>
 
-<ul class="menuSelection"> 
-  <li><a href="/tempo#home"> Home </a></li>
-  <li><a href="/tempo#customActivities"> Custom Activities</a></li>
-  <li><a href="/tempo#settings"> Settings</a></li>
-</ul>
+<div class="sidebar">
+  <ul class="menuSelection"> 
+    <li><a href="/tempo#logout"> Logout</a></li>
+    <li><a href="/tempo#settings"> Settings</a></li>
+    <li><a href="/tempo#customActivities"> Custom Activities</a></li>
+    <li><a href="/tempo#home"> Home </a></li>
+
+  </ul>
+</div>
 
 <div class="testDiv">
   <div id="time-options-container"></div>
