--- a/app/views/tempo/index.html.erb
+++ b/app/views/tempo/index.html.erb
@@ -55,16 +55,90 @@
     margin-top: 20px;
     font-weight: normal;
   }
+
+
+
+  /*Activity List styling ~~~~~~~~~~~~~~~*/
+  #activityTitle {
+    margin: 0 auto;
+    text-align: center;
+    background-color: #D5DDE6;
+    width: 625px;
+    height: 45px;
+    border-radius: 2px;
+    position: relative;
+    border: 1px solid #eee;
+  }
+
+  #activityTitle h4 {
+    margin: 0;
+    position: relative;
+    top: 12px;
+    color: #9b59b6;
+  }
+
+  .activityTable {
+    border: 1px solid #eee;
+    width: 625px;
+    margin: 0 auto;
+    background: rgb(250, 250, 250);
+    box-shadow: 1px 1px 1px #999;
+    border-radius: 2px;
+    text-align: center;
+  }
+
+  .activityTable thead {
+    background-color: #2980B9;
+    color: white;
+    width: 100%;
+    padding: 0;
+  }
+
+  .activityTable th {
+    height: 30px;
+    padding: 3px;
+  }
+
+  .activityTable td {
+    height: 30px;
+    border-top: 1px solid #eee;
+  }
+
+  .activityTable a {
+    text-decoration: none;
+  }
+
+  .activityTable a:hover {
+    text-decoration: underline;
+    color: black;
+    opacity: .6;
+    background-color: rgb(250, 250, 250);
+  }  
+
+  .activityTable #contentType {
+    color: #e67e22;
+  }
+
+  .activityTable #likeCount {
+    color: #16a085;
+  }
+
+  .activityTable #dislikeCount {
+    color: #c0392b;
+  }  
+
+
 </style>
 
 
 <ul class="menuSelection"> 
   <li><a href="/tempo#home"> Home </a></li>
-  <li><a href="/tempo#activities"> Activities </a></li>
-  <li><a href="/tempo#interests"> Interests </a></li>
-  <li><a href="/tempo#users"> Users</a></li>
+  <!-- <li><a href="/tempo#activities"> Activities </a></li> -->
+  <!-- <li><a href="/tempo#interests"> Interests </a></li> -->
+  <!-- <li><a href="/tempo#users"> Users</a></li> -->
+  <li><a href="/tempo#settings"> Settings</a></li> 
   <li><a href="/tempo#customActivities"> Custom Activities</a></li>
-  <li><a href="/tempo#settings"> Settings</a></li>
+ 
 </ul>
 
 <div class="testDiv">
