--- a/app/views/tempo/index.html.erb
+++ b/app/views/tempo/index.html.erb
@@ -11,7 +11,7 @@
   }
 
   #logo {
-    width: 170px;
+    width: 160px;
     height: 80px;
     margin-left: 20px;
     margin-top: 20px;
@@ -157,6 +157,12 @@
     color: #c0392b;
   }  
 
+  /*INTEREST TABLE*/
+  .interestTable {
+    margin: 0 auto;
+    /*border: 1px solid green;*/
+    width: 200px;
+  }
 
 </style>
 
