--- a/app/assets/javascripts/backbone/templates/activities/settings.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/settings.jst.ejs
@@ -1,10 +1,111 @@
-<h3 style='color: #e74c3c;'> Settings Page </h3>
-<span>
-<form>
-  New password:<br>
-  <input type="change-password" name="change-password" id="password-change">
-</form>
-  <button class="change-submit"> Change password </button>
-</span>
-<br>
-<a href='tempo#home'> Go Home</a>
+
+
+<style>
+	.settingsModule {
+		margin: 0 auto;
+		text-align: center;
+	    width: 350px;
+	    height: 215px;
+	    border: 1px solid #dedede;
+	    border-radius: 3px;
+	    background-color: white;
+	    box-shadow: .5px .5px .5px #888888;
+	    margin: 0 auto;
+	    text-align: center;
+	    padding-top: 20px;
+	    padding-bottom: 20px;
+	    font-size: 15px;
+	    margin-top: 30px;
+	    position: relative;	
+	    top: 75px;	
+	}
+
+	  .settingsModule header {
+	    position: absolute;
+	    top: 0;
+	    width: 100%;
+	    height: 20%;
+	    border-bottom: 1px solid #DDD;
+	    background: #F4F4F2;
+	  }
+
+	  .settingsModule section {
+	  	position: absolute;
+	  	top: 15%;
+	  	width: 100%;
+	  	height: 65%;
+	  }
+
+	  .settingsModule footer {
+	  	position: absolute;
+	  	bottom: 0;
+	  	width: 100%;
+	  	height: 20%;
+	  	background: white;
+	  }
+	  a {
+	  	text-decoration: none;
+	  }
+	  a:hover {
+	  	background-color: white;
+	  	color: black;
+	  	font-size: 110%;
+	  }
+
+
+	  .settingsModule input {
+	    width: 295px;
+	    height: 30px;
+	    margin-bottom: 15px;
+	    margin-top: 10px;
+	  }
+
+	  .settingsModule input:hover {
+	    background-color: #E4F1FE;
+	    border: 1px solid #DDD;
+	  }
+
+	  .settingsModule button {
+	    width: 300px;
+	    height: 35px;
+	    display: block;
+	    position: relative;
+	    margin: 0 auto;
+	    margin-bottom: 15px;
+	    margin-top: 10px;
+	    /*background-color: #66CC99;*/
+	    background-color: #D35C48;
+	    border: 1px solid #D35C48;
+	    border-radius: 3px;
+	    color: white;
+	    font-size: 15px;
+
+	  }
+
+	  .settingsModule button:hover {
+	    opacity: .8;
+	    cursor: pointer;
+	  }
+
+</style>
+
+<div class="settingsModule">
+	<header>
+		<h3 style='color: #e74c3c;'> Settings Page </h3>
+	</header>
+
+	<section> 
+		<br>
+		<span>
+			<form>
+			  New password:<br>
+			  <input type="change-password" name="change-password" id="password-change">
+			</form>
+			 <button class="change-submit"> Change password </button>
+		</span>
+
+	</section>
+	<footer>
+		<a href='tempo#home'> Go Home</a>		
+	</footer>
+</div>
