--- a/app/assets/javascripts/backbone/templates/activities/createCustomActivity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/createCustomActivity.jst.ejs
@@ -15,6 +15,11 @@
 		padding-bottom: 20px;
 	}
 
+	#warning {
+	  color: red;
+	  text-align: center;
+	 }
+
 	input {
 		width: 300px;
 		height: 30px;
@@ -49,5 +54,6 @@
 	<input type="text" name"content" id="content" value=""> <br>
 	<label for="completion_time"> Completion time: </label> <br>
 	<input type="text" name"completion_time" id="completion_time" value=""> <br>
+	<p id="warning"> </p> 
 	<button type="button" class="submitCustomActivity"> Submit </button> <br>
 </form>
