--- a/app/assets/javascripts/backbone/templates/activities/settings.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/settings.jst.ejs
@@ -1,5 +1,28 @@
 <h3 style='color: #e74c3c;'> Settings Page </h3>
 <span>
+<h4 style='color: #1abc9c;'> Interest List </h4>
+	<br>
+<table>
+	<thead>
+		<tr>
+			<th> </th>
+			<th colspan='3'> </th>
+		</tr>
+	</thead>
+	<tbody>
+	<% _.each(data, function(interest) { %> 
+		<tr>
+			<td>  
+				<input type=checkbox name= "<%= interest.name%>"  id="interest-<%= interest.index%>" <%= interest.checked%> >
+			</td>
+			<td> <%= interest.name %>
+			</td>
+		</tr>
+		<% }); %>
+	</tbody> 
+</table> 
+</br>
+<button id=submit-interests> save </button> <br>
 <form>
   New password:<br>
   <input type="change-password" name="change-password" id="password-change">
@@ -7,4 +30,3 @@
   <button class="change-submit"> Change password </button>
 </span>
 <br>
-<a href='tempo#home'> Go Home</a>
