added password change fields, doesn't do anything yet

--- a/app/assets/javascripts/backbone/templates/activities/settings.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/settings.jst.ejs
@@ -24,7 +24,11 @@
 </br>
 <button id=submit-interests> save </button> <br>
 <form>
-  New password:<br>
+  <p> Old Password </p>
+  <input type="change-password" name="change-password" id="password-change">
+  <p> New Password </p>
+  <input type="change-password" name="change-password" id="password-change">
+  <p> Confirm Password </p>
   <input type="change-password" name="change-password" id="password-change">
 </form>
   <button class="change-submit"> Change password </button>
