--- a/app/views/tempo/index.html.erb
+++ b/app/views/tempo/index.html.erb
@@ -158,11 +158,162 @@
   }  
 
   /*INTEREST TABLE*/
-  .interestTable {
+  #interestsTitle {
+    text-align: center;
+    width: 200px;
+    border: 1px solid green;
+  }
+
+  .interestContainer {
+    width: 300px;
+    height: 400px;
+    border: 1px solid green;
     margin: 0 auto;
-    /*border: 1px solid green;*/
+  }
+
+  .interestTable {
+    border: 1px solid green;
     width: 200px;
   }
+
+
+  /*Interests in settings page*/
+
+  .settingInterests { 
+    border: 1px solid green;
+    width: 350px;
+    height: 225px;
+    margin: 0 auto;
+    border: 1px solid #dedede;
+    border-radius: 3px;
+    background-color: white;
+    box-shadow: .5px .5px .5px #888888;
+    margin: 0 auto;
+    text-align: center;
+    position: relative;
+    top: 90px;
+  }
+
+  .settingInterests h4 {
+    position: absolute;
+    width: 100%;
+    height: 15%;
+    margin: 0;
+    padding-top: 10px;
+    border-bottom: 1px solid #DDD;
+    background: #F4F4F2;
+  }  
+
+  .settingInterests .settingInterestTable {
+      position: absolute;
+      top: 15%;
+      width: 100%;
+      height: 45%;
+      margin-top: 10px;
+  }
+
+  .settingInterests td {
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 100%;
+  }
+
+  .settingInterests footer {
+    background-color: white;
+  }
+
+  .settingInterests footer #submit-interests {
+      width: 300px;
+      height: 35px;
+      display: block;
+      position: relative;
+      margin: 0 auto;
+      margin-bottom: 15px;
+      margin-top: 0px;
+      /*background-color: #66CC99;*/
+      background-color: #3498db;
+      border: 1px solid #3498db;
+      border-radius: 3px;
+      color: white;
+      font-size: 15px;
+
+  }
+
+  .settingInterests footer #submit-interests:hover {
+      opacity: .8;
+      cursor: pointer;
+  }
+
+
+/*
+  .settingsModule {
+    margin: 0 auto;
+    text-align: center;
+      width: 350px;
+      height: 215px;
+      border: 1px solid #dedede;
+      border-radius: 3px;
+      background-color: white;
+      box-shadow: .5px .5px .5px #888888;
+      margin: 0 auto;
+      text-align: center;
+      padding-top: 20px;
+      padding-bottom: 20px;
+      font-size: 15px;
+      margin-top: 30px;
+      position: relative; 
+      top: 75px;  
+  }
+
+    .settingsModule header {
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 20%;
+      border-bottom: 1px solid #DDD;
+      background: #F4F4F2;
+    }
+
+    .settingsModule section {
+      position: absolute;
+      top: 15%;
+      width: 100%;
+      height: 65%;
+    }
+
+    .settingsModule footer {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 20%;
+      background: white;
+    }
+    a {
+      text-decoration: none;
+    }
+    a:hover {
+      background-color: white;
+      color: black;
+      font-size: 110%;
+    }
+
+
+    .settingsModule input {
+      width: 295px;
+      height: 30px;
+      margin-bottom: 15px;
+      margin-top: 10px;
+    }
+
+    .settingsModule input:hover {
+      background-color: #E4F1FE;
+      border: 1px solid #DDD;
+    }
+
+
+*/
+
+
+
 
 </style>
 
