--- a/app/assets/stylesheets/settings.scss
+++ b/app/assets/stylesheets/settings.scss
@@ -1,7 +1,12 @@
+.page-header {
+	text-align: center;
+
+}
+
 .settingsContainer {
 	display: inline-block;
 	position: relative;
-	height: 500px;
+	height: 700px;
 	width: 100%;
 	/*border: 1px solid green;*/
 	margin-top: 20px;
@@ -10,7 +15,7 @@
 .settingsCol1 {
 	position: relative;
 	left: 0;
-	width: 50%;
+	width: 49%;
 	height: 100%;
 	float: left;
 	/*border: 1px solid red;*/
@@ -26,27 +31,21 @@
 }	
 
 .settingsModule {
-	margin: 0 auto;
 	text-align: center;
-	width: 350px;
-	height: 350px;
+	width: 450px;
+	height: 400px;
 	border: 1px solid #dedede ;
 	border-radius: 3px;
 	background-color: white;
 	box-shadow: .5px .5px .5px #888888 ;
-	margin: 0 auto;
-	text-align: center;
-	padding-top: 20px;
-	padding-bottom: 20px;
 	font-size: 15px;
-	margin-top: 20px;
-	position: relative;    
-	top: 15px;    
+	margin-top: 50px;
+	position: relative; 
+	float: right;   
+	top: 20px;    
 }
 
 .settingsModule header {
-	position: absolute;
-	top: 0;
 	width: 100%;
 	height: 10%;
 	border-bottom: 1px solid #DDD;
@@ -55,7 +54,8 @@
 
 .settingsModule header h3 {
 	position: relative;
-	margin: 10px;
+	padding: 10px;
+	margin: 0;
 }
 
 .settingsModule section {
@@ -67,6 +67,7 @@
 
 .settingsModule section p {
 	font-family: 'Open Sans Condensed', sans-serif;
+	font-size: 15px;
 	margin: 0px;
 }
 
@@ -106,8 +107,7 @@ a:hover {
 	display: block;
 	position: relative;
 	margin: 0 auto;
-	margin-bottom: 15px;
-	margin-top: 10px;
+	margin-top: 68px;
 	/*background-color: #66CC99 ;*/
 	background-color: #D35C48 ;
 	border: 1px solid #D35C48 ;
@@ -126,8 +126,8 @@ a:hover {
 
 .settingInterests { 
 	border: 1px solid green;
-	width: 350px;
-	height: 350px;
+	width: 450px;
+	height: 400px;
 	max-height: 600px;
 	border: 1px solid #dedede;
 	border-radius: 3px;
@@ -136,37 +136,57 @@ a:hover {
 	margin: 0 auto;
 	text-align: center;
 	position: relative;
-	top: 90px;
+	float: left;
+	top: 20px;
+	margin-top: 50px;
 }
 
-.settingInterests h4 {
+.settingInterests header {
 	position: absolute;
+	top: 0;
 	width: 100%;
-	height: 15%;
-	margin: 0;
-	padding-top: 10px;
+	height: 10%;
 	border-bottom: 1px solid #DDD;
 	background: #F4F4F2;
-}  
+}
+
+.settingInterests header h3 {
+	position: relative;
+	padding: 10px;
+	margin: 0;
+	font-size: 20px;
+}
 
 .settingInterests .settingInterestTable {
 	position: absolute;
-	top: 15%;
 	width: 100%;
+	text-align: center;
 	height: 45%;
-	margin-top: 10px;
+	margin-top: 45px;
+	border-collapse: separate; 
+	border-spacing: .5em;
+}
+
+.settingInterests .settingInterestTable tbody {
+	overflow: scroll;
 }
 
 .settingInterests td {
-	font-family: 'Open Sans Condensed', sans-serif;
-	font-size: 100%;
+font-family: 'Open Sans Condensed', sans-serif;
+font-size: 100%;
+}
+
+.settingInterests td input {
+	float: left;
+	margin-left: 75px;
 }
 
 .settingInterests tbody {
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 }
 
 .settingInterests footer {
+	margin-top: 20px;
 	background-color: white;
 }
 
@@ -177,7 +197,6 @@ a:hover {
 	position: relative;
 	margin: 0 auto;
 	margin-bottom: 15px;
-	margin-top: 0px;
 	/*background-color: #66CC99;*/
 	background-color: #3498db;
 	border: 1px solid #3498db;
