Fixed footer issue

--- a/app/views/tempo/index.html.erb
+++ b/app/views/tempo/index.html.erb
@@ -87,6 +87,10 @@
     font-weight: normal;
   }
 
+  footer.mainFooter {
+    position: fixed;
+  }
+
   /*Activity List styling ~~~~~~~~~~~~~~~*/
   #activityTitle {
     margin: 0 auto;
@@ -279,6 +283,6 @@
 <div class='createCustomActivity'> </div>
 <br>
 
-<footer> 
+<footer class='mainFooter'> 
   <h3>Tempo © 2016</h3>
 </footer>
