fixed overflow bug

--- a/app/views/tempo/index.html.erb
+++ b/app/views/tempo/index.html.erb
@@ -115,6 +115,7 @@
     border: 1px solid #eee;
     width: 675px;
     margin: 0 auto;
+    margin-bottom: 20px;
     background: rgb(250, 250, 250);
     box-shadow: 1px 1px 1px #999;
     border-radius: 2px;
