--- a/app/views/tempo/index.html.erb
+++ b/app/views/tempo/index.html.erb
@@ -147,6 +147,7 @@
     text-decoration: underline;
     color: black;
     opacity: .6;
+    font-size: 100%;
     background-color: rgb(250, 250, 250);
   }  
 
