--- a/app/assets/javascripts/backbone/templates/activities/customActivity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/customActivity.jst.ejs
@@ -6,7 +6,7 @@
 		<h4 id='customActivityTitle' style='color: #9b59b6;'> Custom Activity List for <%= name%> </h4> 
 	</header>
 	<br>
-	<table>
+	<table id='customActivityTable' >
 		<thead>
 			<tr>
 				<th>Title</th> <th>Content</th> <th>Time</th> <th>Delete</th>
@@ -24,5 +24,8 @@
 			<% }); %>
 		</tbody> 
 	</table> </br>
-	<a href='/tempo#createCustomActivity' id='add'> Create a Custom Activity </a>
+
+	<footer> 
+		<a href='/tempo#createCustomActivity' id='add'> Create a 	Custom Activity </a>
+	</footer>
 </div>
