--- a/app/assets/stylesheets/custom_activities.scss
+++ b/app/assets/stylesheets/custom_activities.scss
@@ -3,19 +3,10 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 /*Custom Activity Module*/
   .customActivity {
-   /* position: relative;
-    top: 45px;
-    border: 1px solid green;
-    margin: 0 auto;
-    width: 400px;
-    height: 400px;
-    background-color: white;
-    border: 1px solid #ddd;
-    box-shadow: 1px 1px 1px #eee;
-    border-top-left-radius: 5px;
-  	border-top-right-radius: 5px;*/
     border: 1px solid #eee;
     width: 675px;
+    height: 400px;
+    position: relative;
     margin: 0 auto;
     background: rgb(250, 250, 250);
     box-shadow: 1px 1px 1px #999;
@@ -26,6 +17,8 @@
 
   .customActivity header {
     margin: 0 auto;
+    position: relative;
+    top: 0;
 
   }
 
@@ -38,6 +31,7 @@
     border-radius: 2px;
     position: relative;
     border: 1px solid #eee;
+    padding-top: 20px;
   }
 
 
@@ -56,6 +50,28 @@
   .customActivityTable td {
     height: 30px;
     border-top: 1px solid #eee;
+  }
+
+  .customActivity footer { 
+    position: absolute;
+    bottom: 0;
+    height: 15%;
+    width: 100%;
+    background-color: #F4F4F2;
+  }
+
+  .customActivity footer a {
+    position: relative;
+    top: 20px;
+    color: #9b59b6;
+    background-color: #F4F4F2;
+
+  }
+
+  .customActivity footer a:hover {
+    font-size: 100%;
+    text-decoration: underline;
+    color: #9b59b6;
   }
 
 
