added link opens to new tab

--- a/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
@@ -124,7 +124,7 @@
 	</section>
 
 	<footer>
-		<a id="link" href='<%= link %>'> Link </a>
+		<a id="link" href='<%= link %>' target="_blank"> Link </a>
 		<a href='tempo#activities'> Back </a>
 	</footer>
 </div>
