--- a/app/assets/javascripts/backbone/templates/activities/home.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/home.jst.ejs
@@ -100,9 +100,7 @@
 		<br>
 	</section>
 	<footer>
-		<a href='tempo#interests'> Change interests </a>	
+		<a href='tempo#interests'>Toggle interests</a>	
 		<br>
-		<br>
-		<a href='tempo#settings'> See your settings</a>
 	</footer>
 </div>
