--- a/app/assets/javascripts/backbone/templates/activities/customActivity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/customActivity.jst.ejs
@@ -6,11 +6,11 @@
 		<h4 id='customActivityTitle' style='color: #9b59b6;'> Custom Activity List for <%= name%> </h4> 
 	</header>
 	<br>
-	<table id='customActivityTable' >
+	<table class='customActivityTable' >
 		<thead>
 			<tr>
 				<th>Title</th> <th>Content</th> <th>Time</th> <th>Delete</th>
-				<th colspan='3'> </th>
+				<!-- <th colspan='3'> </th> -->
 			</tr>
 		</thead>
 		<tbody>
