--- a/app/assets/stylesheets/custom_activities.scss
+++ b/app/assets/stylesheets/custom_activities.scss
@@ -34,17 +34,27 @@
     padding-top: 20px;
   }
 
-
+  .customActivityTable {
+    position: relative;
+    width: 100%;
+  }
   .customActivityTable thead {
     background-color: #2980B9;
     color: white;
     width: 100%;
     padding: 0;
+
   }
 
   .customActivityTable th {
     height: 30px;
     padding: 3px;
+    background-color: #2980B9;
+
+  }
+
+  .customActivityTable tr {
+    width: 100%;
   }
 
   .customActivityTable td {
@@ -74,5 +84,38 @@
     color: #9b59b6;
   }
 
+  .del-btn {
+    color: white;
+    background-color: #e74c3c;
+    border: 1px solid #e74c3c;
+    border-radius: 55px;
+  }
+
+  .del-btn:hover {
+    cursor: pointer;
+    opacity: .8;
+  }
+
+#add {
+  /*width: 250px;*/
+  /*height: 65px;  */
+  position: relative;
+  padding: 3px;
+  padding-right: 5px;
+  padding-left: 5px;
+  margin: 0 auto;
+  margin-top: 68px;
+  background-color: #27ae60 ;
+  border: 1px solid #27ae60 ;
+  border-radius: 3px;
+  color: white;
+
+}
+
+#add:hover {
+  opacity: .8;
+  cursor: pointer;
+  text-decoration: none;
+}
 
   
