--- a/app/assets/javascripts/backbone/templates/activities/home.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/home.jst.ejs
@@ -3,7 +3,7 @@
 <style>
 	.home-wrapper {
 		width: 350px;
-		height: 400px;
+		height: 500px;
 		border: 1px solid green;
 		margin: 0 auto;
 		margin-top: 100px;
@@ -33,7 +33,7 @@
 		position: absolute;
 		top: 20%;
 		width: 100%;
-		height: 60%;
+		height: 80%;
 	}
 
 	.home-wrapper select {
@@ -59,21 +59,33 @@
 		opacity: .6;
 	}
 
+	.knob {
+		display: inline-block;
+	}
+
 	.home-wrapper h3 {
 		color: #e74c3c;
 	}
 
+	.go-btn {
+	position: fixed;
+	}
+
 	.home-wrapper button {
-	    width: 75px;
-	    height: 75px;
-	    display: block;
-	    margin: 0 auto;
+		position: absolute;
+		top: 221px;
+		right: 122px;
+	    width: 100px;
+	    height: 50px;
 	    /*margin: 15px;*/
 	    margin-top: 15px;
 	    background-color: #66CC99;
 	    border: 1px solid #2ABB9B;
-	    border-radius: 35px;		
+	    border-radius: 5px;	
+	    font-size: 25px;	
 	}
+
+
 
 	.home-wrapper button:hover {
 		opacity: .8;
@@ -91,11 +103,8 @@
 	</header>
 	<section> 
 		<h4> Activity duration </h4>
-		<select id='time-selector'>
-		    <% _(times).each(function(time) { %> 
-		        <option value='<%= time.duration %>'><%= time.duration %></option>
-		    <% }); %>
-		</select> 
+	<input class="knob" data-width="100" data-displayinput="true" value="0" height="100" >
+
 		<button class='go-btn'>GO</button>
 		<br>
 	</section>
