--- a/app/assets/stylesheets/custom_activities.scss
+++ b/app/assets/stylesheets/custom_activities.scss
@@ -99,7 +99,7 @@
 #add {
   /*width: 250px;*/
   /*height: 65px;  */
-  position: relative;
+/*  position: relative;
   padding: 3px;
   padding-right: 5px;
   padding-left: 5px;
@@ -109,13 +109,13 @@
   border: 1px solid #27ae60 ;
   border-radius: 3px;
   color: white;
-
+*/
 }
 
-#add:hover {
+/*#add:hover {
   opacity: .8;
   cursor: pointer;
-  text-decoration: none;
+  text-decoration: none; 
 }
-
+*/
   
