Changed wording for interests

--- a/app/assets/javascripts/backbone/templates/activities/settings.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/settings.jst.ejs
@@ -24,7 +24,7 @@
 		<div class="settingInterests">
 		    <span>
 		    <header>
-		    	<h3 style='color: #1abc9c ;'> Interests </h3>
+		    	<h3 style='color: #1abc9c ;'> All Interests </h3>
 		        <br>
 		    </header>
 		    <table class="settingInterestTable">
