Fix youtube video display on back end and add scrollbar to activity content on front end

--- a/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/activity.jst.ejs
@@ -38,12 +38,12 @@
   }
 
   .activity section p {
-  	overflow: hidden;
+  	overflow: scroll;
   	height: 68%;
   	font-family: 'Open Sans Condensed', sans-serif;
   	font-size: 100%;
   	margin: 10px;
-
+    padding: 10px;
   }
 
   .activity section .likeContainer {
