sidebar new UI + color scheme

--- a/app/assets/stylesheets/custom_activities.scss
+++ b/app/assets/stylesheets/custom_activities.scss
@@ -96,7 +96,7 @@
     opacity: .8;
   }
 
-#add {
+/*#add {*/
   /*width: 250px;*/
   /*height: 65px;  */
 /*  position: relative;
@@ -110,7 +110,7 @@
   border-radius: 3px;
   color: white;
 */
-}
+/*}*/
 
 /*#add:hover {
   opacity: .8;
