--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,32 +1,1 @@
-<p id="notice"><%= notice %></p>
-
-<!-- Todo: Move to css file -->
-<style>
-  .menuSelection {
-    list-style-type: none;
-  }
-
-  .menuSelection li{
-    display: inline;
-    margin: 10px;
-  }
-</style>
-
-
-<h1>Listing Activities or Interests</h1>
-<ul class="menuSelection"> 
-  <li><a href="/activities#home"> Home </a></li>
-  <li><a href="/activities#activities"> Activities </a></li>
-  <li><a href="/activities#interests"> Interests </a></li>
-  <li><a href="/activities#users"> Users </a></li>
-  <li><a href="/activities#custom"> Custom Activities</a></li>
-
-</ul>
-
-<div class="testDiv">
-  <div id="time-options-container"></div>
-</div>
-
-
-
-<br>
+<!-- <p id="notice"><%= notice %></p> -->
