--- a/app/assets/javascripts/backbone/templates/activities/home.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/home.jst.ejs
@@ -1,112 +1,17 @@
 <!-- Temporary styling -->
 
-<style>
-	.home-wrapper {
-		width: 350px;
-		height: 500px;
-		border: 1px solid green;
-		margin: 0 auto;
-		margin-top: 100px;
-		text-align: center;
-		/*padding: 20px;*/
-	    border: 1px solid #dedede;
-	    border-radius: 3px;
-	    background-color: white;
-	    box-shadow: .5px .5px .5px #888888;		
-	    position: relative;
-	}
-
-	.home-wrapper header {
-		position: absolute;
-		top: 0;
-		height: 15%;
-		width: 100%;
-		background-color: #2980B9;
-	}
-
-	.home-wrapper header h3{
-		color: #fff;
-		margin-bottom: 0;
-	}
-
-	.home-wrapper section {
-		position: absolute;
-		top: 20%;
-		width: 100%;
-		height: 80%;
-	}
-
-	.home-wrapper select {
-		width: 100px;
-	}
-
-	.home-wrapper footer {
-		position: absolute;
-		top: 80%;
-		width: 100%;
-		height: 20%;		
-		background-color: white;
-	}
-
-	.home-wrapper footer a {
-		text-decoration: none;
-		color: #2980B9;
-		margin-bottom: 10px;
-	}
-
-	.home-wrapper footer a:hover {
-		background-color: white;
-		opacity: .6;
-	}
-
-	.knob {
-		display: inline-block;
-	}
-
-	.home-wrapper h3 {
-		color: #e74c3c;
-	}
-
-	.go-btn {
-	position: fixed;
-	}
-
-	.home-wrapper button {
-		position: absolute;
-		top: 221px;
-		right: 122px;
-	    width: 100px;
-	    height: 50px;
-	    /*margin: 15px;*/
-	    margin-top: 15px;
-	    background-color: #66CC99;
-	    border: 1px solid #2ABB9B;
-	    border-radius: 5px;	
-	    font-size: 25px;	
-	}
-
-
-
-	.home-wrapper button:hover {
-		opacity: .8;
-		cursor: pointer;
-	}
-
-
-
-</style>
-
-
 <div class="home-wrapper">
 	<header>
 		<h3> Welcome Home <%= name %></h3>
 	</header>
+	<div class="subtitle">
+		<h3> Activity duration </h3>
+	</div>
 	<section> 
-		<h4> Activity duration </h4>
-	<input class="knob" data-width="100" data-displayinput="true" value="0" height="100" >
-
-		<button class='go-btn'>GO</button>
-		<br>
+		<input class="knob" data-width="100" data-displayinput="true" value="0" height="100" >
+		<div id="btn-wrapper">
+			<button class='go-btn'>GO</button>
+		</div>
 	</section>
 	<footer>
 		<a href='tempo#interests'>Toggle interests</a>	
